--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -1,6 +1,6 @@
 /* Themed colors */
 :root {
-    --primary-accent: #2b2b2bd6;
+    --primary-accent: #808080d6;
     --icon-and-text-accent: #ffffff;
     --navbar-border-top: #fbf84a;
     --button-border: #336194;
@@ -19,6 +19,16 @@
   .fab, .fas, .far, .box-simple.icon {
     color: var(--icon-and-text-accent);
     border-color: var(--icon-and-text-accent);
+  }
+  .vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+  }
+  .col-centered {
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
   }
   
   .clearfix:before,
@@ -809,17 +819,15 @@
     position: relative;
   }
   .jumbotron {
-    padding: 30px;
     margin-bottom: 0;
     position: relative;
-    background: url('../img/t-rax-cortege.jpg') center center repeat;
+    background: url('../img/t-rax-cortege-min.jpg') center center repeat;
     background-size: cover;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
   }
   .jumbotron .dark-mask {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -861,14 +869,14 @@
     z-index: 2;
   }
   @media screen and (min-width: 768px) {
-    .jumbotron {
+    /* .jumbotron {
       padding-top: 48px;
       padding-bottom: 48px;
     }
     .container .jumbotron {
       padding-left: 60px;
       padding-right: 60px;
-    }
+    } */
     .jumbotron h1,
     .jumbotron .h1 {
       font-size: 46px;
@@ -1138,116 +1146,6 @@
   }
   .ribbon.gift .theribbon:after {
     border-color: #357935 #357935 transparent transparent;
-  }
-  .owl-carousel .owl-controls .owl-page.active span,
-  .owl-theme .owl-controls .owl-page.active span,
-  .owl-carousel .owl-controls.clickable .owl-page:hover span,
-  .owl-theme .owl-controls.clickable .owl-page:hover span {
-    background: var(--primary-accent);
-  }
-  .owl-carousel .owl-controls .owl-buttons,
-  .owl-theme .owl-controls .owl-buttons {
-    position: absolute;
-    top: 5px;
-    right: 0;
-  }
-  .owl-carousel .owl-controls .owl-buttons div,
-  .owl-theme .owl-controls .owl-buttons div {
-    width: 26px;
-    height: 26px;
-    line-height: 25px;
-    margin: 0 5px 0 0;
-    font-size: 18px;
-    color: var(--primary-accent);
-    padding: 0;
-    background: #fff;
-    border-radius: 13px;
-    vertical-align: middle;
-    text-align: center;
-    opacity: 1;
-    filter: alpha(opacity=100);
-  }
-  .home-carousel {
-    position: relative;
-    background: url('../img/t-rax-cortege-min.jpg') center center repeat;
-    background-size: cover;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-  }
-  .home-carousel .dark-mask {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--primary-accent);
-    opacity: 0.9;
-    filter: alpha(opacity=90);
-  }
-  .home-carousel .owl-carousel {
-    padding-top: 60px;
-    padding-bottom: 20px;
-  }
-  .home-carousel .owl-theme .owl-controls .owl-page span {
-    background: #666;
-  }
-  .home-carousel .owl-theme .owl-controls .owl-page.active span {
-    background: #fff;
-  }
-  .home-carousel .owl-theme .owl-controls .owl-page:hover span {
-    background: #fff;
-  }
-  @media (max-width: 767px) {
-    .home-carousel {
-      text-align: center !important;
-    }
-  }
-  @media (min-width: 992px) {
-    .home-carousel .right {
-      text-align: right;
-    }
-  }
-  .home-carousel h1,
-  .home-carousel h2,
-  .home-carousel h3,
-  .home-carousel p,
-  .home-carousel ul {
-    color: #fff;
-  }
-  .home-carousel h1 {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 46px;
-    letter-spacing: 0.08em;
-  }
-  @media (max-width: 991px) {
-    .home-carousel h1 {
-      font-size: 36px;
-    }
-  }
-  .home-carousel h2 {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 40px;
-    letter-spacing: 0.08em;
-  }
-  .home-carousel ul,
-  .home-carousel p {
-    font-size: 18px;
-    font-weight: 700;
-    padding: 0;
-    text-transform: uppercase;
-    letter-spacing: 0.10em;
-  }
-  @media (max-width: 991px) {
-    .home-carousel ul,
-    .home-carousel p {
-      font-size: 14px;
-    }
-  }
-  .home-carousel ul li {
-    margin-bottom: 10px;
   }
   .customers {
     padding: 0;
@@ -1803,8 +1701,7 @@
     background-size: cover;
   }
   .bar.background-image-fixed-2 {
-    background: linear-gradient(rgba(52, 52, 52, 0.8), rgba(10, 7, 7, 0.108)),
-                url('../img/banner.jpg') center center repeat;
+    background: #ceab00;
     background-attachment: fixed;
     background-size: cover;
   }
@@ -1834,7 +1731,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #000;
+    background: #ffffff;
     opacity: 0.3;
     filter: alpha(opacity=30);
   }
@@ -3268,6 +3165,7 @@
     line-height: 1.42857143;
     color: #333333;
     white-space: nowrap;
+    font-size: 1rem;
   }
   /* labels */
   .label {
@@ -3588,7 +3486,7 @@
   }
   .yamm .nav.navbar-right .dropdown-menu {
     left: auto;
-    right: 0;
+    right: auto;
   }
   .yamm .yamm-content {
     padding: 20px 30px;
@@ -3597,4 +3495,3 @@
     left: 15px;
     right: 15px;
   }
-  
