--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,6 @@
 
   <head>
     {{ partial "headers.html" . }}
-    {{ partial "custom_headers.html" . }}
   </head>
 
   <body>
@@ -11,11 +10,15 @@
     <div id="all">
         {{ partial "nav.html" . }}
 
+        {{ partial "breadcrumbs.html" . }}
+
         {{ partial "carousel.html" . }}
 
         {{ partial "features.html" . }}
 
         {{ partial "footer.html" . }}
+
+        {{ partial "copyright.html" . }}
     </div>
     <!-- /#all -->
 
