--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -2,7 +2,7 @@
 {{ if .Site.Params.features.enable }}
 {{ if isset .Site.Data "features" }}
 {{ if gt (len .Site.Data.features) 0 }}
-<section class="bar background-image-fixed-2 no-mb color-white text-center">
+<section class="bar background-image-fixed-2 no-mb text-center">
     
     <div class="container">
         {{ $elements := default 3 .Site.Params.features.cols }}
