--- a/layouts/shortcodes/makerspace-cards.html
+++ b/layouts/shortcodes/makerspace-cards.html
@@ -8,7 +8,6 @@
     <p class="lead mb-4">
       In FUSE lab there are several different Makerspaces to use.
       Here is an overview of all the spaces available to members.
-      Not already a member?
     </p>
   </div>
 </div>
@@ -32,7 +31,10 @@
       <div class="card-body">
         <h5 class="card-title">{{ $element.name }}</h5>
         <p class="card-text">{{ $element.description }}</p>
-        <a href="#" class="btn btn-primary">Go to makerspace</a>
+        
+        {{ with $element.url }}
+        <a href="{{ $element.url }}" class="btn btn-primary">Go to makerspace</a>
+        {{ end }}
       </div>
     </div>
   </div>
