--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -1,18 +1,20 @@
 /* Themed colors */
 :root {
     --primary-accent: #808080d6;
-    --icon-and-text-accent: #ffffff;
-    --navbar-border-top: #fbf84a;
+    --icon-and-text-accent: #000000;
     --button-border: #336194;
     --link-focus: #2f5a89;
     --form-shadow: rgba(101, 10, 10, 0.5);
     --pagination-bg: #b8cee6;
     --link-hover-bg: #36669c;
     --navbar-focus: #92b3d9;
+
+    --t-rax-yellow: #f1d462;
   }
 
   .feature-text {
     font-size: larger;
+    color: --icon-and-text-accent;
   }
 
   /* Fontawesome fonts */
@@ -348,7 +350,7 @@
   .navbar ul.nav > li.active > a,
   .navbar ul.nav > li.open > a {
     text-decoration: none !important;
-    border-top: solid 5px var(--navbar-border-top);
+    border-top: solid 5px var(--t-rax-yellow);
   }
   @media (max-width: 768px) {
     .navbar ul.nav > li.active > a,
@@ -360,12 +362,12 @@
     }
   }
   .navbar.navbar-light ul.nav > li.active > a {
-    border-top: solid 5px var(--navbar-border-top);
+    border-top: solid 5px var(--t-rax-yellow);
     background: #fff !important;
     color: #555555 !important;
   }
   .navbar.navbar-light ul.nav > li.active > a:hover {
-    border-top: solid 5px var(--navbar-border-top);
+    border-top: solid 5px var(--t-rax-yellow);
   }
   .navbar.navbar-light ul.nav > li > a:hover,
   .navbar.navbar-light ul.nav > li.open > a:hover,
@@ -1650,9 +1652,10 @@
     border: none;
   }
   #heading-breadcrumbs {
-    background: url('../img/banner.jpg') center center repeat;
+    background: #f1d462;
+    /* background: url('../img/banner.jpg') center center repeat; */
     padding: 20px 0;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
   }
   #heading-breadcrumbs.no-mb {
     margin-bottom: 0;
@@ -1701,7 +1704,7 @@
     background-size: cover;
   }
   .bar.background-image-fixed-2 {
-    background: #ceab00;
+    background: #f1d462;
     background-attachment: fixed;
     background-size: cover;
   }
@@ -2438,7 +2441,8 @@
     margin: 0 0 20px;
   }
   #footer {
-    background: #555555;
+    /* background: #f1d462; */
+    background: url('../img/banner.jpg') center center repeat;
     padding: 50px 0;
     color: #999999;
   }
@@ -2858,7 +2862,7 @@
     text-decoration: none;
   }
   .navbar-brand img {
-    max-height: 42px;
+    max-height: 140px;
   }
   @media (min-width: 768px) {
     .navbar > .container .navbar-brand,
