Add bottom jumbo banner on index site
Move TRAX board picture to bottom jumbo and use corridor instead for the top

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,8 @@
 
         {{ partial "features.html" . }}
 
+        {{ partial "community.html" . }}
+
         {{ partial "footer.html" . }}
 
         {{ partial "copyright.html" . }}
