Quickfix use markdown renderer to render html from yaml data file
..because newline in any form does not affect textblock p

--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -52,7 +52,7 @@
             {{ range $link := sort .Site.Data.footer.find_us "weight" }}
             <li>
               <p class="text-white">{{ $link.title }}</p>
-              <p class="text-secondary">{{ $link.desc }}</p>
+              {{ $link.desc | markdownify }}
             </li>
             {{ end }}
           </ul>
