--- a/layouts/shortcodes/board-members.html
+++ b/layouts/shortcodes/board-members.html
@@ -15,7 +15,7 @@
   {{ $board_member := index $board_members $board_member_index }}
 
   <div
-    class="d-flex justify-content-center col-md-{{ div 12 $elements }} col-{{ $j }} col-{{ if eq (mod $j 2) 0 }}odd{{ else }}even{{ end }}">
+    class="p-3 d-flex justify-content-center col-md-{{ div 12 $elements }} col-{{ $j }} col-{{ if eq (mod $j 2) 0 }}odd{{ else }}even{{ end }}">
     <div class="board-member-card card box-simple" style="width: 18rem;">
       {{ if $board_member.image }}
       <img class="card-img-top" src="{{ $board_member.image | absURL}}">
