--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -42,7 +42,7 @@
         </div>
         <!-- /#content -->
 
-        {{ partial "copyright.html" . }}
+        {{ partial "footer.html" . }}
 
     </div>
     <!-- /#all -->
