--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -102,7 +102,7 @@
   .jumbotron h2,
   .jumbotron h3 {
     color: #ffffff;
-    text-transform: uppe  .ul-icons {
+    .ul-icons {
       padding-left: 10px;
     }
     .ul-icons li {
@@ -174,6 +174,24 @@
     /* needer for breadcrumb to display correctly */
     position: relative;
   }
+  .navbar {
+    border: none;
+  }
+  .navbar ul.nav > li > a {
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 0.08em;
+    border-top: solid 5px transparent;
+  }
+  .navbar ul.nav > li > a:hover {
+    border-top: solid 5px var(--primary-accent);
+  }
+  .navbar ul.nav > li.active > a,
+  .navbar ul.nav > li.open > a {
+    text-decoration: none !important;
+    border-top: solid 5px var(--t-rax-yellow);
+  }
   /* navbar brand */
   .navbar-brand {
     float: left;
@@ -203,7 +221,6 @@
   a:hover,
   a:focus {
     color: var(--link-focus);
-    text-decoration: underline;
   }
   a:focus {
     outline: thin dotted;
@@ -278,4 +295,21 @@
   .card-img-size {
     width: 100%;
     height: 100%;
+  }
+
+  .btn-m3-tertiary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: var(--md-sys-color-tertiary-container);
+    --bs-btn-border-color: var(--md-sys-color-tertiary-container);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--md-sys-color-on-tertiary-container);
+    --bs-btn-hover-border-color: var(--md-sys-color-on-tertiary-container);
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--md-sys-color-on-tertiary-container);
+    --bs-btn-active-border-color: var(--md-sys-color-on-tertiary-container);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--md-sys-color-tertiary-container);
+    --bs-btn-disabled-border-color: var(--md-sys-color-tertiary-container);
   }
