--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,4 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+  <div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
   <div class="container-fluid">
     <a class="navbar-brand home" href="{{ "/" | relLangURL }}">
       {{ if default false .Site.Params.disabled_logo }}
