--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -207,6 +207,21 @@
   .navbar-brand img {
     max-height: 140px;
   }
+  @media (max-width: 991px) {
+    .navbar-brand img {
+      display: none;
+    }
+    .navbar-brand {
+      padding: 0;
+      margin: 0;
+      height: 0;
+      width: 0;
+    }
+    .navbar ul.nav > li.active > a,
+    .navbar ul.nav > li > a:hover {
+      border: none;
+    }
+  }
   /* scaffolding */
   body {
     font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -297,6 +312,7 @@
     height: 100%;
   }
 
+  /* Overrides btn colors with m3 tertiary */
   .btn-m3-tertiary {
     --bs-btn-color: #fff;
     --bs-btn-bg: var(--md-sys-color-tertiary-container);
