--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -5,9 +5,9 @@
     <div class="jumbotron" id="top-jumbo">
         <div class="dark-mask">
             {{ range sort .Site.Data.carousel "weight" }}
-            <div class="container">
+            <div class="container p-4">
                 <div class="row d-flex justify-content-center">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 my-auto">
                         <h1>{{ .title | safeHTML }}</h1>
                         {{ .description | safeHTML }}
                     </div>
