--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -52,7 +52,7 @@
             {{ range $link := sort .Site.Data.footer.find_us "weight" }}
             <li>
               <p class="text-white">{{ $link.title }}</p>
-              {{ $link.desc | markdownify }}
+              {{ $link.desc | safeHTML }}
             </li>
             {{ end }}
           </ul>
