Fix become a member button in makerspace-cards

--- a/layouts/shortcodes/makerspace-cards.html
+++ b/layouts/shortcodes/makerspace-cards.html
@@ -49,9 +49,7 @@
     <p class="lead mb-4">
       To get access to a makerspace you must first become a member.
     </p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-m3-tertiary  btn-lg px-4 gap-3">Become a member</button>
-    </div>
+    <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3">Become a member</a>
   </div>
 </div>
 <br>
