--- a/layouts/shortcodes/become-member.html
+++ b/layouts/shortcodes/become-member.html
@@ -15,8 +15,11 @@
             </div>
             <div class="p-3 col-md-5">
                 <h5 class="card-title">{{ $step.title }}</h5>
-                <p class="card-text">{{ $step.description }}</p>
+                <p class="card-text">
+                    {{ $step.description }}
+                </p>
             </div>
+            <hr class="mt-1 mb-1"/>
         {{ else }}
             <div class="p-3 col-md-5">
                 <h5 class="card-title">{{ $step.title }}</h5>
