Add T-RAX logo favicon to site

--- a/layouts/partials/headers.html
+++ b/layouts/partials/headers.html
@@ -33,6 +33,11 @@
   <link href="{{ "css/style.default.css" | relURL }}" rel="stylesheet" id="theme-stylesheet">
 {{ end }}
 
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "img/favicon/apple-touch-icon.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "img/favicon/favicon-32x32.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "img/favicon/favicon-16x16.png" | relURL }}">
+<link rel="manifest" href="{{ "img/favicon/site.webmanifest" | relURL }}">
+
 <link href="{{ "css/theme.css" | relURL }}" rel="stylesheet" id="theme-stylesheet">
 
 <!-- Custom stylesheet - for your changes -->
