Rename weird partials to what they actually contain

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,11 +12,11 @@
 
         {{ partial "breadcrumbs.html" . }}
 
-        {{ partial "carousel.html" . }}
+        {{ partial "what_is_trax.html" . }}
 
         {{ partial "features.html" . }}
 
-        {{ partial "community.html" . }}
+        {{ partial "who_is_trax.html" . }}
 
         {{ partial "footer.html" . }}
     </div>
